// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiceResults matches the snapshot when not visible 1`] = `
<div>
  <div>
    <div
      class="single-result justify-content-center my-3 collapse"
    >
      <img
        class="crit-result-img mx-1"
      />
      <span
        class="die-result"
      >
        0
      </span>
      <img
        class="hit-result-img mx-1"
      />
      <span
        class="die-result"
      >
        0
      </span>
      <img
        class="attack-surge-result-img mx-1"
      />
      <span
        class="die-result"
      >
        0
      </span>
    </div>
    <div
      class="single-result justify-content-center my-3 collapse"
    >
      <img
        class="block-result-img mx-1"
      />
      <span
        class="die-result"
      >
        0
      </span>
      <img
        class="defense-surge-result-img mx-1"
      />
      <span
        class="die-result"
      >
        0
      </span>
    </div>
    <div
      class="single-result justify-content-center my-3 collapse"
    >
      <span
        class="die-result"
      >
        Wounds: 
        0
      </span>
    </div>
    <div
      class="my-3 mx-auto collapse"
      id="chartContainer"
    >
      <div
        data-testid="highcharts-mock"
      />
    </div>
    <div
      class="row collapse"
    >
      <div
        class="col-md-3 offset-md-3 my-3"
      >
        <h3
          class="stats-header"
        >
          Wounds
        </h3>
        <div>
          <span
            class="stats-label"
          >
            Median: 
          </span>
          <span>
            0
          </span>
        </div>
        <div>
          <span
            class="stats-label"
          >
            Mean: 
          </span>
          <span>
            0
          </span>
        </div>
        <div>
          <span
            class="stats-label"
          >
            Standard Deviation: 
          </span>
          <span>
            0
          </span>
        </div>
      </div>
      <div
        class="col-md-3 my-3"
      >
        <h3
          class="stats-header"
        >
          Required Saves
        </h3>
        <div>
          <span
            class="stats-label"
          >
            Median: 
          </span>
          <span>
            0
          </span>
        </div>
        <div>
          <span
            class="stats-label"
          >
            Mean: 
          </span>
          <span>
            0
          </span>
        </div>
        <div>
          <span
            class="stats-label"
          >
            Standard Deviation: 
          </span>
          <span>
            0
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DiceResults matches the snapshot when showing graph result 1`] = `
<div>
  <div>
    <div
      class="single-result justify-content-center my-3 collapse"
    >
      <img
        class="crit-result-img mx-1"
      />
      <span
        class="die-result"
      >
        0
      </span>
      <img
        class="hit-result-img mx-1"
      />
      <span
        class="die-result"
      >
        0
      </span>
      <img
        class="attack-surge-result-img mx-1"
      />
      <span
        class="die-result"
      >
        0
      </span>
    </div>
    <div
      class="single-result justify-content-center my-3 collapse"
    >
      <img
        class="block-result-img mx-1"
      />
      <span
        class="die-result"
      >
        0
      </span>
      <img
        class="defense-surge-result-img mx-1"
      />
      <span
        class="die-result"
      >
        0
      </span>
    </div>
    <div
      class="single-result justify-content-center my-3 collapse"
    >
      <span
        class="die-result"
      >
        Wounds: 
        0
      </span>
    </div>
    <div
      class="my-3 mx-auto collapse.show"
      id="chartContainer"
    >
      <div
        data-testid="highcharts-mock"
      />
    </div>
    <div
      class="row collapse.show"
    >
      <div
        class="col-md-3 offset-md-3 my-3"
      >
        <h3
          class="stats-header"
        >
          Wounds
        </h3>
        <div>
          <span
            class="stats-label"
          >
            Median: 
          </span>
          <span>
            0
          </span>
        </div>
        <div>
          <span
            class="stats-label"
          >
            Mean: 
          </span>
          <span>
            0
          </span>
        </div>
        <div>
          <span
            class="stats-label"
          >
            Standard Deviation: 
          </span>
          <span>
            0
          </span>
        </div>
      </div>
      <div
        class="col-md-3 my-3"
      >
        <h3
          class="stats-header"
        >
          Required Saves
        </h3>
        <div>
          <span
            class="stats-label"
          >
            Median: 
          </span>
          <span>
            0
          </span>
        </div>
        <div>
          <span
            class="stats-label"
          >
            Mean: 
          </span>
          <span>
            0
          </span>
        </div>
        <div>
          <span
            class="stats-label"
          >
            Standard Deviation: 
          </span>
          <span>
            0
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DiceResults matches the snapshot when showing single result 1`] = `
<div>
  <div>
    <div
      class="single-result justify-content-center my-3 collapse.show"
    >
      <img
        class="crit-result-img mx-1"
      />
      <span
        class="die-result"
      >
        0
      </span>
      <img
        class="hit-result-img mx-1"
      />
      <span
        class="die-result"
      >
        0
      </span>
      <img
        class="attack-surge-result-img mx-1"
      />
      <span
        class="die-result"
      >
        0
      </span>
    </div>
    <div
      class="single-result justify-content-center my-3 collapse.show"
    >
      <img
        class="block-result-img mx-1"
      />
      <span
        class="die-result"
      >
        0
      </span>
      <img
        class="defense-surge-result-img mx-1"
      />
      <span
        class="die-result"
      >
        0
      </span>
    </div>
    <div
      class="single-result justify-content-center my-3 collapse.show"
    >
      <span
        class="die-result"
      >
        Wounds: 
        0
      </span>
    </div>
    <div
      class="my-3 mx-auto collapse"
      id="chartContainer"
    >
      <div
        data-testid="highcharts-mock"
      />
    </div>
    <div
      class="row collapse"
    >
      <div
        class="col-md-3 offset-md-3 my-3"
      >
        <h3
          class="stats-header"
        >
          Wounds
        </h3>
        <div>
          <span
            class="stats-label"
          >
            Median: 
          </span>
          <span>
            0
          </span>
        </div>
        <div>
          <span
            class="stats-label"
          >
            Mean: 
          </span>
          <span>
            0
          </span>
        </div>
        <div>
          <span
            class="stats-label"
          >
            Standard Deviation: 
          </span>
          <span>
            0
          </span>
        </div>
      </div>
      <div
        class="col-md-3 my-3"
      >
        <h3
          class="stats-header"
        >
          Required Saves
        </h3>
        <div>
          <span
            class="stats-label"
          >
            Median: 
          </span>
          <span>
            0
          </span>
        </div>
        <div>
          <span
            class="stats-label"
          >
            Mean: 
          </span>
          <span>
            0
          </span>
        </div>
        <div>
          <span
            class="stats-label"
          >
            Standard Deviation: 
          </span>
          <span>
            0
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
